@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x242100
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 24,21,0
-#define MagickChangeDate   "20200909"
-#define MagickReleaseDate  "snapshot-20200909"
+#define MagickChangeDate   "20200913"
+#define MagickReleaseDate  "snapshot-20200913"
 
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
